// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithLimit /> by default matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH LfxJj sc-ifAKCX cvqGPW"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM bMDsgn"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH LfxJj sc-ifAKCX cvqGPW"
    defaultValue=""
    disabled={true}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM galYYx"
    disabled={true}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH dPobDt sc-ifAKCX gOamqF"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM bMDsgn"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`tiny\` prop matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH giqvQX sc-ifAKCX cvqGPW"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM bMDsgn"
    disabled={false}
  >
    80
  </div>
</div>
`;
